For JS-133: Changed WebResource to take an optional progress meter. Changed all the code to always pass a progress meter. Re-wrote o.c.common.progress in a way that is not backward compatible. Added ProgressMode so that a caller can know what kind of progress is being reported.